[package]
name = "stepn-session"
version = "0.1.0"
edition = "2021"
authors = ['dillon']
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
sha2 = "0.10.2"
hex = "0.4.3"
java-rand = "0.2.0"
wasm-bindgen = "0.2.84"
